# Anomaly-Detection

./: .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  DIAGRAMS.md  README.md  TEST_REPORT.md  anomaly_engine.db  flask.py  main.py  requirements.txt
AnomalyEngine/: ARCHITECTURE.md  DEVELOPMENT.md  DIAGRAMS.md  GOOGLE_SEARCH_SETUP.md  README.md  anomaly_engine.db  main.py  pyproject.toml  requirements.txt
AnomalyEngine/artifacts/: all_allowed_symbols.json  allowed_symbols.json  available_models.json  symbols.json  test_symbols.json
AnomalyEngine/artifacts/hyperparams/: ADBL.json  AHPC.json  AKJCL.json  AKPL.json  ALICL.json  API.json  BARUN.json  BFC.json  BPCL.json  CBBL.json  CFCL.json  CGH.json  (+107 more)
AnomalyEngine/configs/: config.yaml
AnomalyEngine/data/: ADBL.csv  AHPC.csv  AKJCL.csv  AKPL.csv  ALICL.csv  API.csv  BARUN.csv  BFC.csv  BPCL.csv  CFCL.csv  CGH.csv  CHCL.csv  CHDC.csv  CHL.csv  CIT.csv  CORBL.csv  CZBIL.csv  DHPL.csv  EBL.csv  EDBL.csv  GBBL.csv  GBIME.csv  GFCL.csv  GHL.csv  GLH.csv  GMFIL.csv  GRDBL.csv  GUFL.csv  HBL.csv  HDHPC.csv  HIDCL.csv  HPPL.csv  HURJA.csv  ICFC.csv  JBBL.csv  JFL.csv  JOSHI.csv  KBL.csv  KKHC.csv  KPCL.csv  (+76 more)
AnomalyEngine/docs/: ARCHITECTURE.md  CHAPTER_5_IMPLEMENTATION.md  DEVELOPMENT.md  DIAGRAMS.md  IMPLEMENTATION.md  TESTING.md  usecase.puml
AnomalyEngine/notebooks/: AnomalyDetection.ipynb  HyperparameterTuning.ipynb
AnomalyEngine/pages/: admin.py  analysis.py  detected_anomalies.py  home.py  insights.py  profile.py  realtime_simulation.py
AnomalyEngine/scripts/: recreate_db.py
AnomalyEngine/tests/: conftest.py
(+481 files in other folders)
